manifests/UAT(1B)/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onlineui-uat-1b
  name: brokerui-uat-1b
  namespace: broker-uat-1b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: onlineui-uat-1b
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: onlineui-uat-1b
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: onlineuiconfigmap-1b
          image: acrcontainerregistrynonprod.azurecr.io/mvtprovisionbrokeronlineui:Latest
          imagePullPolicy: Always
          name: mvtprovisionbrokeronlineui
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: '250Mi'
              cpu: '150m'
            limits:
              memory: '950Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: onlineui-uat-1b
  name: brokerui-svc-uat-1b
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: onlineui-uat-1b
  type: ClusterIP
