manifests/UAT(1B)/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uat-1b-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: brokerui.compute.uat.mutualvision.tech
      http:
        paths:
          - path: /1b/(.*)
            backend:
              serviceName: brokerui-svc-uat-1b
              servicePort: 80
          - path: /1b/app/(.*)
            backend:
              serviceName: application-svc-uat-1b
              servicePort: 80
          - path: /1b/lookup/(.*)
            backend:
              serviceName: lookup-svc-uat-1b
              servicePort: 80
          - path: /1b/account/(.*)
            backend:
              serviceName: accounts-svc-uat-1b
              servicePort: 80
          - path: /1b/product/(.*)
            backend:
              serviceName: product-svc-uat-1b
              servicePort: 80
